// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown input component should render when it is multi-option 1`] = `
<div>
  <div
    className="dropdown-container input-container inactive has-text not-editable undefined"
    onClick={[Function]}
  >
    <label />
    <StateManager
      className="dropdown"
      classNamePrefix="dropdown"
      defaultInputValue=""
      defaultMenuIsOpen={false}
      defaultValue={null}
      isClearable={false}
      menuIsOpen={false}
      onFocus={[Function]}
      placeholder=""
      value={Array []}
    />
  </div>
</div>
`;

exports[`Dropdown input component should render when it is not searchable 1`] = `
<div>
  <div
    className="dropdown-container input-container inactive has-text not-editable undefined"
    onClick={[Function]}
  >
    <label>
      Label
    </label>
    <StateManager
      className="dropdown"
      classNamePrefix="dropdown"
      defaultInputValue=""
      defaultMenuIsOpen={false}
      defaultValue={null}
      isClearable={false}
      isSearchable={false}
      menuIsOpen={false}
      onFocus={[Function]}
      placeholder=""
      value={
        Object {
          "label": "One",
          "value": 1,
        }
      }
    />
  </div>
</div>
`;

exports[`Dropdown input component should render when it is searchable 1`] = `
<div>
  <div
    className="dropdown-container input-container inactive has-text  undefined"
    onClick={[Function]}
  >
    <label>
      Label
    </label>
    <StateManager
      className="dropdown"
      classNamePrefix="dropdown"
      defaultInputValue=""
      defaultMenuIsOpen={false}
      defaultValue={null}
      isClearable={false}
      isSearchable={true}
      menuIsOpen={false}
      onFocus={[Function]}
      placeholder="Value goes here"
      value={
        Object {
          "label": "Two",
          "value": 2,
        }
      }
    />
  </div>
</div>
`;
